# RolyPolyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  install.sh
.github/workflows/: clang-format.yml  cmake.yml
apps/: CMakeLists.txt  cascade_shadow_test.c  gltf_model.c  gltf_viewer.c  hello_triangle.c
cmake/: library.cmake  targets.cmake
libs/: CMakeLists.txt
libs/app/: CMakeLists.txt  app.c  app.h  camera_view.c  camera_view.h  ibl_helper.c  ibl_helper.h  nk_helper.c  nk_helper.h  window.c  window.h
libs/gltf/: CMakeLists.txt
libs/gltf/include/gltf/: gltf_asset.h  gltf_loader.h  resource_loader.h
libs/gltf/src/: gltf_loader.c  ktx_loader.c  ktx_loader.h  material_cache.c  material_cache.h  resource_loader.c  resource_loader.h  skin_instance.c  skin_instance.h  stb_loader.c  stb_loader.h
libs/utility/: CMakeLists.txt
libs/utility/src/utility/: aligned_alloc.h  arena.c  arena.h  array.c  array.h  array_utility.c  array_utility.h  benchmark.c  benchmark.h  compiler.h  filesystem.c  filesystem.h  hash.c  hash.h  hash_set.c  hash_set.h  job_queue.c  job_queue.h  maths.h  parallel_for.c  parallel_for.h  random.h  sleep.h  sort.c  sort.h  string.c  string.h  thread.h  thread_unix.c  thread_win.c  timer.h  vector.c  vector.h  work_stealing_queue.c  work_stealing_queue.h
libs/utility/test/: test_arena.c  test_array.c  test_filesystem.c  test_hash_set.c  test_job_queue.c  test_main.c  test_math.c  test_sort.c  test_string.c  test_vector.c  test_work_stealing_queue.c
rpe/: CMakeLists.txt
rpe/benchmark/: test_scene.c  test_shadow.c
rpe/include/rpe/: aabox.h  camera.h  engine.h  ibl.h  light_manager.h  material.h  mesh.h  object.h  object_manager.h  renderable_manager.h  renderer.h  scene.h  settings.h  shadow_manager.h  skybox.h  transform_manager.h
rpe/src/: aabox.h  camera.c  camera.h  colour_pass.c  colour_pass.h  commands.c  commands.h  compute.c  compute.h  engine.c  engine.h  frustum.c  frustum.h  ibl.c  ibl.h  light_pass.c  light_pass.h  material.c  material.h  private_engine.c  private_engine.h  render_queue.c  render_queue.h  renderer.c  renderer.h  scene.c  scene.h  shadow_manager.c  shadow_manager.h  shadow_pass.c  shadow_pass.h  skybox.c  skybox.h  vertex_buffer.c  vertex_buffer.h
rpe/src/managers/: component_manager.c  component_manager.h  light_manager.c  light_manager.h  object_manager.c  object_manager.h  renderable_manager.c  renderable_manager.h  transform_manager.c  transform_manager.h
rpe/src/render_graph/: backboard.c  backboard.h  dependency_graph.c  dependency_graph.h  graphviz.c  graphviz.h  render_graph.c  render_graph.h  render_graph_handle.h  render_graph_pass.h  render_pass_node.c  render_pass_node.h  rendergraph_resource.c  rendergraph_resource.h  resource_node.c  resource_node.h  resources.c  resources.h
rpe/test/: test_commands.c  test_compute.c  test_engine.c  test_main.c  test_render_graph.c  test_runner.c  test_visibility.c  vk_setup.h
shaders/: CMakeLists.txt  brdf.frag  cull.comp  eqirect_to_cubemap.frag  eqirect_to_cubemap.vert  fullscreen_quad.vert  irradiance_envmap.frag  irradiance_envmap.vert  lighting.frag  material.frag  material.vert  post_process.frag  post_process.vert  shadow.frag  shadow.vert  shadow_cascade_debug.frag  specular_prefilter.frag  specular_prefilter.vert
shaders/include/: common.h  draw_data.h  lights.h  math.h  model_material_types.h  model_mesh_types.h  pbr.h  shadow.h  tonemapping.h
shaders/materials/: bloom.glsl
vulkan-api/: CMakeLists.txt
vulkan-api/src/backend/: convert_to_vk.c  convert_to_vk.h  enums.h  objects.h
vulkan-api/src/vma/: vma_common.cpp  vma_common.h
vulkan-api/src/vulkan-api/: buffer.c  buffer.h  commands.c  commands.h  common.c  common.h  context.c  context.h  descriptor_cache.c  descriptor_cache.h  driver.c  driver.h  error_codes.h  frame_buffer_cache.c  frame_buffer_cache.h  pipeline.c  pipeline.h  pipeline_cache.c  pipeline_cache.h  program_manager.c  program_manager.h  renderpass.c  renderpass.h  resource_cache.c  resource_cache.h  sampler_cache.c  sampler_cache.h  shader.c  shader.h  shader_util.c  shader_util.h  staging_pool.c  staging_pool.h  swapchain.c  swapchain.h  texture.c  texture.h  utility.c  utility.h
vulkan-api/test/: test_cache.c  test_main.c  test_program_manager.c  test_shader.c  test_shader_util.c
